--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -16,6 +16,19 @@ jobs:
            git config --global user.email "actions@github.com"
            git config --global user.name "GitHub Actions"
 
+ - name: Add uYouEnhanced submodules
+        run: |
+          git submodule add https://github.com/arichornloverALT/YTHoldForSpeed.git Tweaks/YTHoldForSpeed
+          git submodule add https://github.com/arichornloverALT/YouGroupSettings.git Tweaks/YouGroupSettings
+          git submodule add https://github.com/arichornloverALT/YouTimeStamp.git Tweaks/YouTimeStamp
+          git submodule add https://github.com/bhackel/YouLoop.git Tweaks/YouLoop
+          git submodule add https://github.com/dayanch96/uYouLocalization.git Tweaks/uYouLocalization
+          git submodule add https://github.com/PoomSmart/YTIcons Tweaks/YTIcons
+          git submodule add https://github.com/protocolbuffers/protobuf.git Tweaks/protobuf
+          git add .
+          git commit -m "added uYouEnhanced submodules"
+          git push origin
+          
       - name: Update submodules
         run: |
           git submodule update --init --recursive --remote Tweaks/Alderis
